<resources>
    <string name="app_name">Administrator</string>

    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user_register">New User? Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_maps">Map</string>
    <string name="not_a_member_yet_click_to_register">Not a member yet? Click to register</string>
</resources>
